feat: get short url tracking record
